# Crow-Engine

./: .gitmodules  Global And Detailed Planning Sheet_V0.70(1) (1).numbers  README.md
Crow/: CMakeLists.txt  Crow.h  Crow.sln  FindAssimp.cmake  FindFreeType.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindSFML.cmake  Findspdlog.cmake  main.cpp
Crow/Assets/: UnityAssetFile.asset  allAssets.asset
Crow/Assets/Models/: Golem.fbx  HeadStoneBroken.mtl  Mausoleum.fbx  PortalFrame.mtl  bridgeTile.fbx  bridgeTileBegin.fbx  bush1.fbx  bush2.fbx  canon.fbx  cart.mtl  coffin.fbx  crate.mtl  curvedBridge.fbx  tree1.fbx  tree2.fbx
Crow/Assets/Shaders/: FragmentShader.fs  HealthBarFragmentShader.fs  HealthBarVertexShader.vs  PortalFragmentShader.fs  PortalVertexShader.vs  PostProcessingShader.fs  (+9 more)
Crow/Core/: Game.cpp  Game.h  ResourceLoader.cpp
Crow/Crow/: Crow.vcxproj  Crow.vcxproj.filters
Crow/Debug/: Debug.cpp  Debug.h
Crow/Feather/: ComponentArray.cpp  ComponentArray.h  ComponentHandle.cpp  ComponentHandle.h  ComponentManager.cpp  ComponentManager.h  EntityHandle.h  EntityManager.h  Feather.cpp  Feather.h  System.h  SystemManager.h  Types.h  World.cpp  World.h
Crow/OOP Engine/: Component.cpp  Component.h  Gameobject.cpp  Gameobject.h  OOPEngine.cpp  OOPEngine.h
Crow/Plugins/: stb_image.h
Crow/Rendering/: Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Crow/SandBox/: MainWorld.cpp  MainWorld.h  MyGame.cpp  MyGame.h  Sandbox.vcxproj
Crow/Sandbox/: Sandbox.vcxproj
Crow/Tests/: FeatherTest.h  OOPEngineTest.h
(+303 files in other folders)
